add folder and file view

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pokenotes</title>
+    <title>PokeNotes</title>
     <link rel="stylesheet" href="stylesheets/hero.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
@@ -16,17 +16,16 @@
         <span class="material-symbols-outlined usericon"> account_circle </span>
       </div>
       <div class="headTitle">
-        <span>kishan's space</span>
+        <span class="username"></span>
       </div>
     </header>
     <main class="heroMain">
-      <ul class="allFolders">
-        <li class="notFoundMsg">No folders found! Create one</li>
-      </ul>
-      <button class="createBtn addFolBtm">
+      <ul class="allFolders"></ul>
+      <button class="createBtn addFolBtn">
         <span>Folder </span>
         <span class="material-symbols-outlined"> add_2 </span>
       </button>
     </main>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
